fix line wrap, more cmd

--- a/styles.css
+++ b/styles.css
@@ -95,7 +95,15 @@ body {
   align-items: center;
   margin-bottom: 0.5rem;
   line-height: 1rem;
-  white-space: pre;
+
+  white-space: -moz-pre-wrap; /* Firefox */
+  white-space: -pre-wrap; /* ancient Opera */
+  white-space: -o-pre-wrap; /* newer Opera */
+  white-space: pre-wrap; /* Chrome; W3C standard */
+
+  word-wrap: break-word;
+  line-break: anywhere;
+  overflow: hidden;
 }
 
 .terminal-leader {
